force-app/main/default/objects/ProductBatchAssignment__c/ProductBatchAssignment__c.object-meta.xml
<CustomObject>
    <label>ProductBatchAssignment</label>
    <nameField>
        <label>ProductBatchAssignment__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProductBatchAssignment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>