force-app/main/default/objects/ProductBatchAssignment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ProductBatchAssignment</relationshipLabel>
    <relationshipName>ProductBatchAssignment</relationshipName>
    <type>Lookup</type>
</CustomField>