force-app/main/default/objects/ProductBatchAssignment__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Batch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st Batch</fullName>
            </value>
            <value>
                <fullName>2nd Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>