force-app/main/default/objects/ProductBatchAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Product__c</columns>
    <columns>First_Consumption_Date__c</columns>
    <columns>Batch__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>